# System-Programming

./: .gitignore  CMakeLists.txt  main.c
Lecture/Lecture14/: 01_test_threads.c  02_flip_flop.c  04_mutex.c  05_early_exit.c  06_detach.c  07_thread_attr.c  08_signal.c  Makefile
Lecture/Lecture17-18/: 01_sig_example.c  02_race_condition.c  03_read_example.c  04_ignore_example.c  05_sigaction_example.c
Lecture/Lecture19-20/: 01_async_demo.c  02_aio_demo.c  03_strace_demo2.c  03_strace_demo3.c
Lecture/Lecture21-22/: 02_example_popen.c  03_socket_client.c  03_socket_server.c  04_rw_client.c  05_web_server.c  Makefile
Lecture/Lecture5-12/: 01_Lazy1.sh  01_Redirect.c  01_Sum.c  01_file_descriptor1.c  02_Lazy2.sh  02_Redirect_dup.c  02_file_descriptor2.c  03_Lazy.sh  03_pipes.c  03_whotofile.c  04_pipes2.c  05_execvp_test.c  05_pipes3.c  Exe_Exe.x  ExecVP.c  Fork.c  Redirect  a.out  fd1  fd2  input.txt  lazy1.sh  lazy2.sh  my_file.txt
Lecture/lecture2/: 02_my_second_script.sh  04_if_1_square.sh  07_loops_normal.sh  08_loops_4_while_until.sh
Lecture/lecture3/: 01_variables_1_bucket.sh  02_variables_2_ls.sh  03_arguments_1.sh  03_variables_3_together.sh  04_variables_4_quack.sh  05_if_2_square_maths.sh  05_variables_5_semicolons.sh  06_loops_arrays.sh  06_variables_6_on_the_fly.sh  07_export_script.sh  07_variables_7_export.sh  09_test_RPSLS.sh  10_RPSLS.sh  11_io_1_input.sh  12_io_2_output.sh  13_io_3_input_output.sh  14_io_4_append.sh  15_io_5_read_example.sh  16_io_6_triple_arrow.sh  17_pipe_1.sh  21_return_values_2_number_of_lines.sh  22_return_values_3_pass_fail.sh
Lecture/lecture4/: 01_expansion_1_globbing.sh  01_functions_1_return_values.sh  02_expansion_2.sh  02_functions_2_locals.sh  03_Commands_In_Echo.sh  03_functions_3_exit1.sh  04_functions_4_exit2.sh  05_select.sh  11_subshells_1.sh  12_subshells_2.sh  13_subshells_3_scope.sh  21_ReadInput.txt  21_in_builts_cut.sh  22_in_builts_5_paste.sh  23_in_builts_6_read.sh
Test/: CMakeLists.txt  for.c
Test/2017/: 2017_Q3_a.c  2017_Q5_a.c  dirSize.bash  test.txt
Test/2018/: Q3_a.c  Q4_b.c  Q4_c.c  baz.bash  charcounts.bash  counter.c  linestarts.bash  pipe.c  print_doubleinput.c  q2_d.bash  stat.c  test_line.txt  toupper.bash  weekday.bash
Test/2021/part3/: q3.bash  rainbow.bash
Test/2021/part4/: 2021-p4-q2.c  2021-p4-q5.c
Test/2021/part5/: 2021-p5-q3.c
Test/2021/part6/: 2021-p6-q2.c
Test/MiniExam/: Q10.bash  Q8.c  q12.bash
Test/assignment2/: Makefile  sequence.c
Test/assignment3/: Simple_Shell_C.c  a.out  glob.c  redirection.c
assignment/assignment1/: caesar  create_pattern  decipher1  decode  input.txt
assignment/assignment2/: Makefile  common.c  common.h  pipeline.c  sequence.c  sequence_with_test.c
assignment/assignment3/: Makefile  README.txt  execute.c  execute2.c  execute3.c  execute4.c  shell.tgz  smsh1.c  smsh3.c  smsh3_input.txt  smsh4
assignment/assignment3/bar1/: foo1.txt
assignment/assignment4/: Makefile  input.txt  output.txt  part1.c  part2.c
workshop/workshop2/: input.txt  phone.bash  recent.bash  sizeof.bash
